installed express, knex, sqlite3 as dependencies & added .gitignore file

--- a/package.json
+++ b/package.json
@@ -16,5 +16,10 @@
   "bugs": {
     "url": "https://github.com/Co-Make-numero-uno/Backend/issues"
   },
-  "homepage": "https://github.com/Co-Make-numero-uno/Backend#readme"
+  "homepage": "https://github.com/Co-Make-numero-uno/Backend#readme",
+  "dependencies": {
+    "express": "^4.17.1",
+    "knex": "^0.21.5",
+    "sqlite3": "^5.0.0"
+  }
 }
