--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
     "express": "^4.17.1",
     "knex": "^0.21.5",
     "sqlite3": "^5.0.0"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.4"
   }
 }
