--- a/package.json
+++ b/package.json
@@ -19,7 +19,13 @@
   },
   "homepage": "https://github.com/Co-Make-numero-uno/Backend#readme",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "cookie-parser": "^1.4.5",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
+    "express-session": "^1.17.1",
+    "helmet": "^4.1.1",
+    "jsonwebtoken": "^8.5.1",
     "knex": "^0.21.5",
     "sqlite3": "^5.0.0"
   },
